# WszebiShop

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bandit.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.ebextensions/: 01-autoscaling.config  django.config
.github/workflows/: ws-ci.yml
carts/: forms.py  models.py  urls.py
carts/migrations/: 0001_initial.py  0002_initial.py
carts/tests/: test_carts_factories.py  test_carts_views.py  test_factories.py  test_views.py
core/: env.py  settings.py  urls.py
dashboards/: dash_apps.py  dash_data.py  urls.py  views.py
dashboards/tests/: test_dash_data.py  test_views.py
orders/: admin.py  factories.py  forms.py  models.py  views.py
orders/tests/: test_factories.py  test_views.py
payments/: views.py
payments/migrations/: 0002_initial.py
payments/tests/: test_factories.py  test_views.py
shop/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_initial.py
shop/tests/: test_factories.py  test_models.py  test_shop_models.py  test_shop_views.py  test_views.py
src/carts/: admin.py  apps.py  context_processors.py  factories.py  forms.py  models.py  urls.py  views.py
src/core/: asgi.py  env.py  settings.py  urls.py  wsgi.py
src/dashboards/: dash_data.py  urls.py
src/orders/: admin.py  factories.py  models.py  urls.py  utils.py  views.py
src/payments/: factories.py  models.py  urls.py  views.py
src/shop/: admin.py  context_processors.py  factories.py  (+4 more)
users/: factories.py  views.py
(+122 files in other folders)
